src/test/ui/wf/wf-trait-default-fn-arg.stderr
error[E0277]: the trait bound `Self: std::cmp::Eq` is not satisfied
  --> $DIR/wf-trait-default-fn-arg.rs:11:5
   |
LL |   struct Bar<T:Eq+?Sized> { value: Box<T> }
   |   ----------------------- required by `Bar`
...
LL |       fn bar(&self, x: &Bar<Self>) {
   |       ^                           - If I were you, I would simply consider further restricting `Self`: `where Self: std::cmp::Eq`
   |  _____|
   | |
LL | |
LL | |         //
LL | |         // Here, Eq ought to be implemented.
LL | |     }
   | |_____^ the trait `std::cmp::Eq` is not implemented for `Self`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
